- added moving comment button (visible when and where text is selected)  - Changed layout     - Documents presenter is fixed width     - Only comment is fluid, changing width

--- a/Wimer/WebApplication3/wwwroot/styles/document-reader.css
+++ b/Wimer/WebApplication3/wwwroot/styles/document-reader.css
@@ -22,8 +22,16 @@
     position: fixed;
 }
 
+.document-presenter {
+    /*float: left;*/
+    margin-left: 60px;
+    width: 740px;
+    position: absolute;
+    box-sizing: border-box;
+}
+
 .my-fluid {
-    padding-left: 60px;
+    padding-left: 800px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
